manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82263407
spec:
    ports:
    - port: 8080 
    selector:
        app: "my-82263407"
